
   # deleted vector product map code as it was not mature enough to warrant
     inclusion into framework

   CadrgMap class
      1) fixed a bug in findBestZone() method

--------------------------------------------------------------------------------
otw


--------------------------------------------------------------------------------
recorder


--------------------------------------------------------------------------------
simulation

   #
   # Separated the IrSensor and MergingIrSensor classes from being defined within
   # the same physical file called "IrSensor.h/cpp"
   #

   Antenna clas
      1) Added the 'beamWidth' slot and related functions; moved here from
         the RfSensor class.

   AutoPilot class
      1) added several new slots that define default pilot flight actions or 
         characteristics, such as the maximum rate of turn, bank angle, max
         climb, etc.  These are pilot characteristics in defining how a plane
         is flown -- not physical performance characteristics associated with
         the vehicle itself.

   AngleOnlyTrackManager class
      1) initialized a few previously uninitialized variables -- the initialization
         didn't matter, but we like to adhere to coding stds.

   CollisionDetect class
      1) New collision detection component -- when added as a component to a player,
         it will look for collisions with other players in the simulation player list.

   DynamicsModels class
      1) set commanded heading, velocity, and altitude now take additional
         parameters to define change rates.

   Radar class
      1) Added check to ensure a track mgr is available to sent reports, before
         doing so (fix)

   RfSensor class
      1) Updated serialize method
      2) setSlotModeSingle() -- unref()'d the new Pair (fixed a "memory drip")
      3) Deprecated the 'beamWidth' slot and related fuctions; 'beamWidth' is
         being moved to the Antenna class.

   RfSystem class